feature/business-logic: set up logging